@@ -740,7 +740,7 @@ Use this option to affect the resizing operation of an image (see
      Sinc
 .fi
 
-The default filter is \fBLanczos\fP.
+The default filter is \fBMitchell\fP.
 
 .TP
 .B "-flatten"
