@@ -861,7 +861,7 @@ Choose from these filters:</dd>
 &nbsp;&nbsp;&nbsp;&nbsp; Sinc</pre>
 
 <dd>
-The default filter is <b>Lanczos</b>.</dd>
+The default filter is <b>Mitchell</b>.</dd>
 </dl>
 
 <dl>&nbsp;
