@@ -804,7 +804,7 @@ Choose from these filters:</dd>
 &nbsp;&nbsp;&nbsp;&nbsp; Sinc</pre>
 
 <dd>
-The default filter is <b>Lanczos</b>.</dd>
+The default filter is <b>Mitchell</b>.</dd>
 
 <dl>&nbsp;
 <table BORDER=0 WIDTH="65%" >
